--- a/.ebextensions/02env_vars.config
+++ b/.ebextensions/02env_vars.config
@@ -14,7 +14,7 @@ files:
     mode: "000777"
     owner: root
     group: root
-    source: https://s3.amazonaws.com/app-env/.env
+    source: https://s3.amazonaws.com/stephanie-access/.env
     authentication: S3AccessCred
 
 container_commands:
