--- a/.ebextensions/03artisan_commands.config
+++ b/.ebextensions/03artisan_commands.config
@@ -1,7 +1,8 @@
 #Artisan commands to seed database
 container_commands:
    10_migrate:
-      command: "php /var/app/ondeck/artisan --env=staging migrate:refresh"
+      echo "Migrating Database"
+      command: "php /var/app/ondeck/artisan migrate"
       cwd: "/var/app/ondeck"
       leader_only: true
    11_seed:
