Fix artisan cache and config

--- a/.ebextensions/03artisan_commands.config
+++ b/.ebextensions/03artisan_commands.config
@@ -1,7 +1,15 @@
 #Artisan commands to seed database
 container_commands:
+   08_clear_cache:
+      command: "php artisan cache:clear"
+      cwd: "/var/app/ondeck"
+      leader_only: true
+   09_config_clear:
+      command: "php artisan config:clear"
+      cwd: "/var/app/ondeck"
+      leader_only: true
    10_migrate:
-      command: "php /var/app/ondeck/artisan --env=staging migrate"
+      command: "php artisan --env=staging migrate"
       cwd: "/var/app/ondeck"
       leader_only: true
    11_seed:
