Added rollback config for database connection failure

--- a/.ebextensions/03artisan_commands.config
+++ b/.ebextensions/03artisan_commands.config
@@ -1,13 +1,17 @@
 #Artisan commands to seed database
 container_commands:
-   08_clear_cache:
+   07_clear_cache:
       command: "php artisan cache:clear"
       cwd: "/var/app/ondeck"
       leader_only: true
-   09_config_clear:
+   08_config_clear:
       command: "php artisan config:clear"
       cwd: "/var/app/ondeck"
       leader_only: true
+   09_migration_rollback
+      command: "php artisan migrate:rollback"
+      cwd: "/var/app/ondeck"
+      leader_only: tr
    10_migrate:
       command: "php artisan --env=staging migrate"
       cwd: "/var/app/ondeck"
