--- a/.ebextensions/03artisan_commands.config
+++ b/.ebextensions/03artisan_commands.config
@@ -8,10 +8,10 @@ container_commands:
       command: "php artisan config:clear"
       cwd: "/var/app/ondeck"
       leader_only: true
-   09_migration_rollback
+   09_migration_rollback:
       command: "php artisan migrate:rollback"
       cwd: "/var/app/ondeck"
-      leader_only: tr
+      leader_only: true
    10_migrate:
       command: "php artisan --env=staging migrate"
       cwd: "/var/app/ondeck"
